--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
          
     <distributionManagement>
         <snapshotRepository>
-            <id>nexus-snapshots</id>
+            <id>maven-releases</id>
             <url>http://192.168.179.26:9081/repository/maven-repo/</url>
         </snapshotRepository>
     </distributionManagement>
