--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.zufarexplainedit</groupId>
+    <groupId>zufarexplainedit</groupId>
     <artifactId>hello</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>Hello</name>
     <description>Hello</description>
 
